--- a/hpc/templates/hpc/index.html
+++ b/hpc/templates/hpc/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
+{% extends "hpc/base.html" %}
 
-</body>
-</html>
+{% block title %}:: Haku's - Haku's flying in the sky ::{% endblock %}
+
+{% block content %}
+
+    Index
+
+{% endblock %}
