--- a/hpc/templates/hpc/index.html
+++ b/hpc/templates/hpc/index.html
@@ -7,5 +7,7 @@
     Index
 
     <a href="{% url 'hpc:lalala' %}">lalala</a>
+    <a href="http://blog.kohaku.cc">Blog</a>
+    <a href="https://old.kohaku.cc">旧版Blog</a>
 
 {% endblock %}
